force-app/main/default/src/objects/HealthCloudGA__EhrConditionRelatedItem__c/HealthCloudGA__EhrConditionRelatedItem__c.object-meta.xml
<CustomObject>
    <label>EHR Condition Related Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EHR Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EHR Conditon Related Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>