force-app/main/default/src/objects/HealthCloudGA__EhrConditionRelatedItem__c/fields/HealthCloudGA__Condition__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition</label>
    <referenceTo>HealthCloudGA__EhrCondition__c</referenceTo>
    <relationshipLabel>EHR Conditon Related Items</relationshipLabel>
    <relationshipName>ConditonRelatedItems</relationshipName>
    <type>Lookup</type>
</CustomField>