force-app/main/default/src/objects/HealthCloudGA__EhrConditionRelatedItem__c/fields/HealthCloudGA__MedicationStatement__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MedicationStatement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medication Statement</label>
    <referenceTo>HealthCloudGA__EhrMedicationStatement__c</referenceTo>
    <relationshipLabel>EHR Conditon Related Items</relationshipLabel>
    <relationshipName>ConditonRelatedItems</relationshipName>
    <type>Lookup</type>
</CustomField>