force-app/main/default/src/objects/HealthCloudGA__EhrConditionRelatedItem__c/fields/HealthCloudGA__TargetCondition__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TargetCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Condition</label>
    <referenceTo>HealthCloudGA__EhrCondition__c</referenceTo>
    <relationshipLabel>EHR Conditon Related Items (Target Condition)</relationshipLabel>
    <relationshipName>TargetConditonRelatedItems</relationshipName>
    <type>Lookup</type>
</CustomField>