force-app/main/default/src/objects/HealthCloudGA__EhrConditionRelatedItem__c/fields/HealthCloudGA__TargetDetail__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TargetDetail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>