force-app/main/default/src/objects/HealthCloudGA__EhrConditionRelatedItem__c/fields/HealthCloudGA__TargetImmunization__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TargetImmunization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Immunization</label>
    <referenceTo>HealthCloudGA__EhrImmunization__c</referenceTo>
    <relationshipLabel>EHR Conditon Related Items</relationshipLabel>
    <relationshipName>ConditonRelatedItems</relationshipName>
    <type>Lookup</type>
</CustomField>